Refactor platform header includes for FLTK 1.4 compatibility and add HighDPI support

--- a/release/Info.plist.in
+++ b/release/Info.plist.in
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>vncviewer</string>
 	<key>NSHighResolutionCapable</key>
-	<false/>
+	<true/>
 	<key>CFBundleGetInfoString</key>
 	<string>@VERSION@, Copyright (C) 1999-2026 TigerVNC team and many others (see README.rst)</string>
 	<key>CFBundleIconFile</key>
